--- a/backend/package.json
+++ b/backend/package.json
@@ -14,14 +14,15 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
-    "concurrently": "^4.0.1",
-    "express": "^4.16.4",
+    "body-parser": "^1.20.1",
+    "concurrently": "^4.1.2",
+    "express": "^4.18.2",
     "is-empty": "^1.2.0",
-    "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.3.11",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "validator": "^10.9.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.15",
+    "nodemon": "^2.0.20",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.1",
+    "validator": "^10.11.0"
   }
 }
